--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,9 +12,17 @@ services:
       - TZ=Asia/Seoul
     volumes:
       - $VOLUME_DIR:/var/lib/mysql
+    networks:
+      - fluxtream
 
   adminer:
     restart: always
     image: adminer
     ports:
       - "${ADMINER_PORT}:8080"
+    networks:
+      - fluxtream
+
+networks:
+  fluxtream:
+    external: true
