--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,8 +13,9 @@ services:
     volumes:
       - $VOLUME_DIR:/var/lib/mysql
 
-  adminer:
-    restart: always
-    image: adminer
-    ports:
-      - "${ADMINER_PORT}:8080"
+# ui dashboard is optional
+#  adminer:
+#    restart: always
+#    image: adminer
+#    ports:
+#      - "${ADMINER_PORT}:8080"
